menu fixes - hover items, zindex and no wrapping

--- a/src/menu/menu.css
+++ b/src/menu/menu.css
@@ -1,4 +1,4 @@
-ul, li, p { padding: 0; margin: 0; font: inherit; }
+ul, li { padding: 0; margin: 0; font: inherit; }
 slot, li.split .icon { display: none; }
 .top:not(.open), ul:not(.top) { visibility: hidden; }
 
@@ -7,13 +7,13 @@ ul {
   background-color: #fff;
   box-shadow: 2px 2px 3px #888;
   transition: background-color .6s;
+  z-index: 9999999;
 }
 
 .top {
   position: fixed; 
   font-size: .65rem;
   user-select: none;
-  z-index: 9999999;
 }
 
 .icon.left { left: 1em; transform: translate(-50%, -50%); }
@@ -24,12 +24,12 @@ ul {
   line-height: 0;
 }
 
-li > p:not(:empty) { margin: 0 1em; }
+li > p:not(:empty) { margin: 0 1em; white-space: nowrap; }
 li.disabled { color: #bbb; }
 li.split { border-top: 1px solid #bbb; padding: 0; margin: .3em; }
 li.split:first-child, li.split:last-child, li.split + li.split { display: none; }
 li.hover:not(.disabed):not(.split) { background-color: #bbb; }
-li.hover > ul { visibility: visible; }
+.top.open li.hover > ul { visibility: visible; }
 li {
   margin: .2em 0;
   padding: .5em 1em;
